<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="173dp"
    android:layout_height="215dp"
    android:layout_margin="10dp"
    app:cardCornerRadius="20dp"
    android:foreground="?attr/selectableItemBackground"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="10dp">

    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_cards"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/receitasImg"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:scaleType="centerCrop"
            android:src="@drawable/bolodemilho" />

        <TextView
            android:id="@+id/receitasTitle"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/receitasImg"
            android:layout_centerHorizontal="true"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/boloMilho"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/category_background"
                android:maxLines="1"
                android:padding="2dp"
                android:text="@string/bolos"
                android:textAlignment="center"
                android:textColor="@color/orangeRed"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/category2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/category_background"
                android:maxLines="1"
                android:padding="2dp"
                android:text="@string/doces"
                android:textAlignment="center"
                android:textColor="@color/orangeRed"
                android:textSize="10sp" />
        </LinearLayout>


    </RelativeLayout>
</androidx.cardview.widget.CardView>
